project(GCJ-Qualification-Round-2021)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
include_directories($ENV{ATCODER_TEMPLATE}/ac-library)
add_executable(GCJ-Qualification-Round-2021a a.cpp)
add_executable(GCJ-Qualification-Round-2021b b.cpp)
add_executable(GCJ-Qualification-Round-2021c c.cpp)
add_executable(GCJ-Qualification-Round-2021d d.cpp)
add_executable(GCJ-Qualification-Round-2021e e.cpp)
add_executable(GCJ-Qualification-Round-2021f f.cpp)
add_executable(GCJ-Qualification-Round-2021g g.cpp)
add_executable(GCJ-Qualification-Round-2021h h.cpp)
