project(GCJ1B2021)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
include_directories($ENV{ATCODER_TEMPLATE}/ac-library)
add_executable(GCJ1B2021a a.cpp)
add_executable(GCJ1B2021b b.cpp)
add_executable(GCJ1B2021c c.cpp)
