project(ABC166)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(ABC166A a.cpp)
add_executable(ABC166B b.cpp)
add_executable(ABC166C c.cpp)
add_executable(ABC166D d.cpp)
add_executable(ABC166E e.cpp)
add_executable(ABC166F f.cpp)

