project(ABC172)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(ABC172a a.cpp)
add_executable(ABC172b b.cpp)
add_executable(ABC172c c.cpp)
add_executable(ABC172d d.cpp)
add_executable(ABC172e e.cpp)
add_executable(ABC172f f.cpp)
