project(abc180)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(abc180a a.cpp)
add_executable(abc180b b.cpp)
add_executable(abc180c c.cpp)
add_executable(abc180d d.cpp)
add_executable(abc180e e.cpp)
add_executable(abc180f f.cpp)
