project(abc187)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(abc187a a.cpp)
add_executable(abc187b b.cpp)
add_executable(abc187c c.cpp)
add_executable(abc187d d.cpp)
add_executable(abc187e e.cpp)
add_executable(abc187f f.cpp)
