project(abc191)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(abc191a a.cpp)
add_executable(abc191b b.cpp)
add_executable(abc191c c.cpp)
add_executable(abc191d d.cpp)
add_executable(abc191e e.cpp)
add_executable(abc191f f.cpp)
