project(abc193)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
include_directories($ENV{ATCODER_TEMPLATE}/ac-library)
add_executable(abc193a a.cpp)
add_executable(abc193b b.cpp)
add_executable(abc193c c.cpp)
add_executable(abc193d d.cpp)
add_executable(abc193e e.cpp)
add_executable(abc193f f.cpp)
