project(ABC224)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
include_directories($ENV{ATCODER_TEMPLATE}/ac-library)
add_executable(ABC224a a.cpp)
add_executable(ABC224b b.cpp)
add_executable(ABC224c c.cpp)
add_executable(ABC224d d.cpp)
add_executable(ABC224e e.cpp)
add_executable(ABC224f f.cpp)
add_executable(ABC224g g.cpp)
add_executable(ABC224h h.cpp)
