project(abl)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(abla a.cpp)
add_executable(ablb b.cpp)
add_executable(ablc c.cpp)
add_executable(abld d.cpp)
add_executable(able e.cpp)
add_executable(ablf f.cpp)
