project(acl1)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(/Users/tsubasa/Documents/Projects/atcoder/0templates/ac-library)
add_executable(acl1a a.cpp)
add_executable(acl1b b.cpp)
add_executable(acl1c c.cpp)
add_executable(acl1d d.cpp)
add_executable(acl1e e.cpp)
add_executable(acl1f f.cpp)
