project(arc104)
cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
set(CMAKE_CXX_STANDARD 17)
find_package(BOOST)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(arc104a a.cpp)
add_executable(arc104b b.cpp)
add_executable(arc104c c.cpp)
add_executable(arc104d d.cpp)
add_executable(arc104e e.cpp)
add_executable(arc104f f.cpp)
